# file

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  auth.py  config.py  db.py  errors.py  filesystem.py  main.py  metadata.py  models.py  schemas.py
backend/app/routers/: auth.py  files.py  metadata.py
backend/tests/: conftest.py  test_auth.py  test_files_api.py  test_filesystem_security.py  test_metadata_api.py  test_search.py
docs/superpowers/plans/: 2026-05-22-personal-file-manager.md
docs/superpowers/specs/: 2026-05-21-cloudreve-prototype-design.md  2026-05-22-personal-file-manager-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  selection.test.ts  selection.ts  styles.css  types.ts
frontend/src/components/: AppShell.tsx  ContextMenu.tsx  Dialogs.tsx  FileArea.tsx  Sidebar.tsx  Toolbar.tsx  UploadPanel.tsx
llmdoc/: index.md  startup.md
llmdoc/architecture/: backend.md  deployment.md  frontend.md
llmdoc/guides/: adding-file-operation.md  development.md
llmdoc/must/: deployment-config.md  security-boundaries.md  verification.md
llmdoc/overview/: project-overview.md
llmdoc/reference/: api.md  configuration.md
