[project]
name = "personal-file-manager-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2.0"
]
[project.optional-dependencies]
test = ["pytest>=8.2.0", "httpx>=0.27.0"]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
